# cufractal

./: CMakeLists.txt  README.md  setup.py
include/: cuda_utils.h  fractal.h
python/: example.py
src/: bindigs.cpp  fractal_cpu.cpp  fractal_cuda.cu
tests/: test_fractal.py
